--- a/index.html
+++ b/index.html
@@ -6,10 +6,19 @@
     <title>Portifólio Diego Moreira</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="shortcut icon" href="favicon.svg" type="image/svg">
+    <script src="https://kit.fontawesome.com/b21c8a1551.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-        <h1>Em breve...</h1>
+        <nav id="menu">
+            <ul>
+                <li><a href="#"><i class="fa-solid fa-house-chimney"></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-brain"></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-graduation-cap"></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-laptop-code"></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-moon"></i></a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
