--- a/index.html
+++ b/index.html
@@ -24,7 +24,24 @@
     <main>
 
     </main>
+        <section id="ficha">
+            <img src="imagens/Perfil.JPG" alt="Diego Moreira" class="foto">
+            <h1>Diego Moreira</h1>
+            <h2>Desenvolvedor Front-End</h2>
+            <p>Desenvolvedor web focado em criar páginas e interfaces profissionais, rápidas e responsivas. Atuo na construção de layouts bem estruturados, com atenção à experiência do usuário e à clareza visual.<br>
+            Estou sempre aprimorando minhas habilidades técnicas e aplicando meus conhecimentos em projetos reais, com o objetivo de entregar soluções confiáveis, funcionais e alinhadas às expectativas de quem contrata.
+            <div id="social">
+                <a href="https://www.linkedin.com/in/diego-moreira-968342390/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://github.com/Devdiegorosa" target="_blank"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.instagram.com/diego.rosa.ofc?igsh=MWdmdGwzdGh2OXA4MA%3D%3D&utm_source=qr" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://wa.me/13213158595" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+                <a href="mailto:devdiegorosa@gmail.com"><i class="fa-solid fa-envelope"></i></a>
+            </div>
+</p>
+        </section>
+        <section id="detalhes">
 
+        </section>
     <footer>
 
     </footer>
