Atualizei as imagens dos projetos no portfólio.

--- a/index.html
+++ b/index.html
@@ -222,23 +222,89 @@
                 </div>
             </article> <!-- Fim article#formacao -->
 
-            <article id="projeto">
+            <article id="projeto"> 
                 <h2><i class="fa-solid fa-laptop-code"></i> Meus projetos</h2>
+
                 <div id="projeto-container">
-                    <div class="projeto">
-                        <iframe src="https://devdiegorosa.github.io/Projeto-Cordel/" frameborder="0" id="cordel">Projeto Cordel</iframe>
-                        <p class="periodo">2025</p>
-                        <h3 class="titulo">Projeto Cordel</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
-                        <details class="descricao">
-                            <summary>Saiba mais...</summary>
-                            <p>Este projeto consiste em um cordel usando o efeito parallax com HTML e CSS.</p>
-                        </details>
+                    <div class="projeto"> <!-- Projeto 1 -->
+                        <img src="imagens/projeto-01-cordel.jpg" alt="projeto 1" class="foto">
+                        <div class="projeto-info">
+                            <p class="periodo">2025</p>
+                            <h3 class="titulo">Projeto Cordel</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p>Este projeto consiste em um cordel usando o efeito parallax com HTML e CSS.</p>
+                            </details>
+                        </div>    
+                    </div>
+
+                    <div class="projeto"> <!-- Projeto 2 -->
+                        <img src="imagens/projeto-02-android.jpg" alt="projeto-android" class="foto">
+                        <div class="projeto-info">
+                            <p class="periodo">2025</p>
+                            <h3 class="titulo">Projeto Android</h3>
+                            <p>O projeto é um site simples com conteúdo de curiosidades sobre tecnologia (tema Android), criado com: HTML5, CSS3 e hospedado no GitHub Pages.</p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p>
+                                    Desenvolvido um site com conteúdos de curiosidades sobre tecnologia, com destaque para fatos interessantes sobre o sistema Android. O site foi estruturado usando HTML5 semântico e estilizado com CSS3, com foco em clareza, organização visual e responsividade básica.
+                                </p>
+                                <p>
+                                    Tecnologias utilizadas:
+                                    <ul>
+                                        <li>HTML5</li>
+                                        <li>CSS3</li>
+                                        <li>Hospedagem com GitHub Pages</li>
+                                    </ul>
+                            
+                                </p>
+                                <p>
+                                    O que foi trabalhado neste projeto:
+                                    <ul>
+                                        <li>Estruturação semântica de conteúdo</li>
+                                        <li>Criação de layout visual limpo e organizado</li>
+                                        <li>Aplicação de estilos com CSS</li>
+                                        <li>Publicação online utilizando GitHub Pages</li>
+                                    </ul>
+                                </p>
+                                <p>
+                                    Objetivo:
+                                    Aplicar os conhecimentos de HTML e CSS na construção de um site funcional e visualmente agradável, além de demonstrar capacidade de publicar projetos online.
+                                </p>
+                            </details>
+                        </div>    
+                    </div>
+
+                    <div class="projeto"> <!-- Projeto 3 -->
+                        <img src="imagens/projeto-03-sociais.png" alt="projeto-sociais" class="foto">
+                        <div class="projeto-info">
+                            <p class="periodo">2025</p>
+                            <h3 class="titulo">Projeto Social</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p>Este projeto consiste em um cordel usando o efeito parallax com HTML e CSS.</p>
+                            </details>
+                        </div>    
+                    </div>
+
+                    <div class="projeto"> <!-- Projeto 4 -->
+                        <img src="imagens/projeto-04-login.jpg" alt="projeto-login" class="foto">
+                        <div class="projeto-info">
+                            <p class="periodo">2025</p>
+                            <h3 class="titulo">Projeto Login</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p>Este projeto consiste em um cordel usando o efeito parallax com HTML e CSS.</p>
+                            </details>
+                        </div>    
                     </div>
             </article> <!-- Fim article#projetos -->
         </section>
     <footer>
-
+        Portifólio desenvolvido por <a href="https://github.com/Devdiegorosa" target="_blank">Diego Moreira</a> em 2025.
     </footer>
 
     <script src="scripts/script.js"></script>
