--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
     <header>
         <nav id="menu">
             <ul>
-                <li><a href="#"><i class="fa-solid fa-house-chimney"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-brain"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-graduation-cap"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-laptop-code"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-moon"></i></a></li>
+                <li><a href="#ficha" class="link"><i class="fa-solid fa-house-chimney"></i></a></li>
+                <li><a href="#skills" class="link"><i class="fa-solid fa-brain"></i></a></li>
+                <li><a href="#formacao" class="link"><i class="fa-solid fa-graduation-cap"></i></a></li>
+                <li><a href="#projetos" class="link"><i class="fa-solid fa-laptop-code"></i></a></li>
+                <li><a href="#" id="botao-tema"><i class="fa-solid fa-moon"></i></a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-
-    </main>
         <section id="ficha">
             <img src="imagens/Perfil.JPG" alt="Diego Moreira" class="foto">
             <h1>Diego Moreira</h1>
             <span id="title">Desenvolvedor Front-End</span>
             <p>Desenvolvedor web focado em criar páginas e interfaces profissionais, rápidas e responsivas. Atuo na construção de layouts bem estruturados, com atenção à experiência do usuário e à clareza visual.<br>
             Estou sempre aprimorando minhas habilidades técnicas e aplicando meus conhecimentos em projetos reais, com o objetivo de entregar soluções confiáveis, funcionais e alinhadas às expectativas de quem contrata.
+            </p>
+
             <div id="social">
                 <a href="https://www.linkedin.com/in/diego-moreira-968342390/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://github.com/Devdiegorosa" target="_blank"><i class="fa-brands fa-github"></i></a>
@@ -37,13 +37,14 @@
                 <a href="https://wa.me/13213158595" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
                 <a href="mailto:devdiegorosa@gmail.com"><i class="fa-solid fa-envelope"></i></a>
             </div>
-</p>
         </section>
+
         <section id="detalhes">
             <article id="skills">
                 <h2><i class="fa-solid fa-brain"></i> Minhas skills</h2>
 
                 <div id="skill-container">
+
                     <div class="item">
                         <div class="info">
                             <span class="nome"><i class="fa-solid fa-code"></i>
@@ -222,7 +223,7 @@
                 </div>
             </article> <!-- Fim article#formacao -->
 
-            <article id="projeto"> 
+            <article id="projetos"> 
                 <h2><i class="fa-solid fa-laptop-code"></i> Meus projetos</h2>
 
                 <div id="projeto-container">
@@ -303,6 +304,8 @@
                     </div>
             </article> <!-- Fim article#projetos -->
         </section>
+
+    </main>
     <footer>
         Portifólio desenvolvido por <a href="https://github.com/Devdiegorosa" target="_blank">Diego Moreira</a> em 2025.
     </footer>
