Coloquei links dos projetos nas imagens.

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                 <div id="projeto-container">
 
                     <div class="projeto"> <!-- Projeto 1 -->
-                        <img src="imagens/projeto-01-cordel.jpg" alt="projeto 1" class="foto">
+                        <a href="https://devdiegorosa.github.io/projeto-cordel/" target="_blank"><img src="imagens/projeto-01-cordel.jpg" alt="projeto 1" class="foto"></a>
                         <div class="projeto-info">
                             <p class="periodo">2025</p>
                             <h3 class="titulo">Projeto Cordel</h3>
@@ -285,7 +285,7 @@
                     </div>
 
                     <div class="projeto"> <!-- Projeto 2 -->
-                        <img src="imagens/projeto-02-android.jpg" alt="projeto-android" class="foto">
+                        <a href="https://devdiegorosa.github.io/projeto-android/" target="_blank"><img src="imagens/projeto-02-android.jpg" alt="projeto-android" class="foto"></a>
                         <div class="projeto-info">
                             <p class="periodo">2025</p>
                             <h3 class="titulo">Projeto Android</h3>
@@ -334,7 +334,7 @@
                     </div>
 
                     <div class="projeto"> <!-- Projeto 3 -->
-                        <img src="imagens/projeto-03-sociais.png" alt="projeto-sociais" class="foto">
+                        <a href="https://devdiegorosa.github.io/projeto-redes-sociais/" target="_blank"><img src="imagens/projeto-03-sociais.png" alt="projeto-sociais" class="foto"></a>
                         <div class="projeto-info">
                             <p class="periodo">2025</p>
                             <h3 class="titulo">Projeto Social</h3>
@@ -385,7 +385,7 @@
                     </div>
 
                     <div class="projeto"> <!-- Projeto 4 -->
-                        <img src="imagens/projeto-04-login.jpg" alt="projeto-login" class="foto">
+                        <a href="https://devdiegorosa.github.io/projeto-login/" target="_blank"><img src="imagens/projeto-04-login.jpg" alt="projeto-login" class="foto"></a>
                         <div class="projeto-info">
                             <p class="periodo">2025</p>
                             <h3 class="titulo">Projeto Login</h3>
@@ -429,12 +429,6 @@
                                     Demonstrar domínio dos fundamentos de front-end na criação de uma interface
                                     de login bem estruturada e visualmente profissional, reforçando conceitos de
                                     formulários, layout e experiência do usuário.
-                                </p>
-
-                                <p>
-                                    <a href="#" target="_blank" rel="noopener">
-                                    Visualizar projeto
-                                    </a>
                                 </p>
                                 </section>
                             </details>
