--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                 <div id="projeto-container">
 
                     <div class="projeto"> <!-- Projeto 1 -->
-                        <a href="https://devdiegorosa.github.io/projeto-cordel/" target="_blank"><img src="imagens/projeto-01-cordel.jpg" alt="projeto 1" class="foto"></a>
+                        <a href="https://devdiegorosa.github.io/Projeto-Cordel/" target="_blank"><img src="imagens/projeto-01-cordel.jpg" alt="projeto 1" class="foto"></a>
                         <div class="projeto-info">
                             <p class="periodo">2025</p>
                             <h3 class="titulo">Projeto Cordel</h3>
