--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
                                 Git e GitHub
                             </span>
                             <span class="porcent">
-                                60%
+                                80%
                             </span>
                         </div>
                         <div class="barra">
-                            <div class="progresso" style="width: 60%;"></div>
+                            <div class="progresso" style="width: 80%;"></div>
                         </div>
                     </div>
 
@@ -219,6 +219,18 @@
                         <p class="periodo">2025 - 2025</p>
                         <h3 class="instituicao">Estudonauta</h3>
                         <p class="titulacao">HTML 5 / CSS3</p>
+                    </div>
+
+                    <div class="curso"> <!-- Formação 6 -->
+                        <p class="periodo">2026 - 2026</p>
+                        <h3 class="instituicao">Estudonauta</h3>
+                        <p class="titulacao">JavaScript</p>
+                    </div>
+
+                    <div class="curso"> <!-- Formação 5 -->
+                        <p class="periodo">2026 - 2026</p>
+                        <h3 class="instituicao">Estudonauta</h3>
+                        <p class="titulacao">GIT / GITHUB</p>
                     </div>
                 </div>
             </article> <!-- Fim article#formacao -->
