--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                     <div class="curso"> <!-- Formação 5 -->
                         <p class="periodo">2026 - 2026</p>
                         <h3 class="instituicao">Estudonauta</h3>
-                        <p class="titulacao">GIT / GITHUB</p>
+                        <p class="titulacao">Git / GitHub</p>
                     </div>
                 </div>
             </article> <!-- Fim article#formacao -->
